missing views of dashboard links added

--- a/src/App.css
+++ b/src/App.css
@@ -13,3 +13,16 @@
 .fullh{
   height: 100%;
 }
+.guidelink{
+  width: 250px;
+  background-color: rgb(151, 206, 193, 0.5);
+  /* opacity: 0.5; */
+  text-decoration: none;
+  border-radius: 10px;
+  margin: 20px;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  justify-items: center;
+}
